tests/negative/traits/mutability-mismatch.orng
trait Lol {
    fn lmao(&mut self) -> ()
}

impl Lol for Int {
    fn lmao(&mut self) -> () {
        self^ = 30
    }
}

fn main() -> Int {
    let x = 5
    let y = &x
    y.>lmao()
    x
}